Ejecutando la migracion de Catalog Api

--- a/src/Services/Catalog/Catalog.Api/appsettings.json
+++ b/src/Services/Catalog/Catalog.Api/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-0GU0ACE\\SQLEXPRESS;Database=KodotiEcommerce;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
