--- a/src/Services/Catalog/Catalog.Persistence.Database/Catalog.Persistence.Database.csproj
+++ b/src/Services/Catalog/Catalog.Persistence.Database/Catalog.Persistence.Database.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20200727014515_Initialize.cs" />
+    <Compile Remove="Migrations\20200727014813_Initialize.cs" />
+    <Compile Remove="Migrations\20200727015346_Initialize.cs" />
+    <Compile Remove="Migrations\20200727015852_Initialize.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CatalogDomain\CatalogDomain.csproj" />
+  </ItemGroup>
+
 </Project>
